--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title>My JavaScript App</title>
 </head>
 <body>
-  <script src="index.js"></script>
+  <script src="./src/index.js"></script>
 </body>
 </html>
