--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My JavaScript App</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My React App</title>
 </head>
 <body>
-  <script src="./src/App.js"></script>
+  <div id="root"></div>
+
+  <!-- Inclusion des fichiers JS -->
+  <script src="./src/index.js"></script>
 </body>
 </html>
+
